--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -23,7 +23,7 @@
                     <p class="text-light">{{[project2.description]}}</p>
                 </div>
             </div>
-            <button type="button" class="btn btn-info" mdbRipple>Ver proyecto</button>
+            <button (click)="openModalProjects($event)" type="button" class="btn btn-info" mdbRipple>Ver proyecto</button>
         </div>
     </div>
 </main>
