--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -5,6 +5,7 @@ footer{
     align-items: center;
     margin-top: -1px;
     height: 5vh;
+    width: 100%;
     background: linear-gradient(0deg, #11232F 74%, transparent 100%);
     font-size: .8em;
     p{
@@ -12,6 +13,9 @@ footer{
         font-family: orangekid;
         color: white;
     }
+    position: absolute;
+    bottom: 0;
+    // width: 100%;
 }
 
 @media only screen and (max-width: 540px){
