--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -48,13 +48,17 @@
        </article>
        <article id="contacts">
             <span>Contactos</span>
-            <div class="contactOption">
+            <!-- <div class="contactOption">
                 <img src="assets/img/whatsapp.png" alt="WhatsApp">
                 <h3>+58 04145707171</h3>
             </div>
             <div class="contactOption">
                 <img src="assets/img/discord.png" alt="Discord">
                 <h3>thelostmagician</h3>
+            </div> -->
+            <div class="contactOption" *ngFor="let contact of contactos; let i=index">
+                <img src="{{contact.icon}}" alt="{{contact.}}">
+                <h3>{{contact.dato}}</h3>
             </div>
        </article>
     </section>
