--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -1,6 +1,12 @@
 main {
     display: flex;
     justify-content: center;
+    margin: {
+        bottom: 20%;
+    }
+    h2{
+        font-family: orangekid;
+    }
     .contextFlex{
         display: flex;
         // width: 100%;
@@ -25,12 +31,14 @@ main {
 //MEDIA QUERIES
 @media only screen and (max-width: 367px){ //max-width era de 360px, ideal 416px
     main{
+
         flex-flow: wrap column;
         align-items: center;
         .contextFlex{
             width: 100%;
             flex-flow: wrap column;
             align-items: center;
+            overflow-x: scroll;
             .projects{
                 font-family: orangekid;
                 flex-flow: nowrap column;
@@ -39,6 +47,9 @@ main {
                 width: 90%;
                 margin: {
                     bottom: 1em;
+                }
+                &::-webkit-scrollbar{
+                    display: none;
                 }
                 button {
                     width: 40%;
@@ -84,16 +95,20 @@ main {
         .contextFlex{
             width: 100%;
             // height: 60vh;
-            height: 360px;
+            height: 370px;
             overflow-x: scroll;
             overflow-y: hidden;
             flex-flow: nowrap row;
             // justify-content: space-evenly;
             // align-items: center;
+            overflow-x: scroll;
             padding: {
                 left: 1%;
             }
-            .projects{
+            &::-webkit-scrollbar{
+                display: none;
+            }
+            .projects{       
                 flex-flow: column nowrap;
                 // min-width: 30%;
                 min-width: 190px;
