Creacion del folder docs para el deploy

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -57,7 +57,7 @@
                 <h3>thelostmagician</h3>
             </div> -->
             <div class="contactOption" *ngFor="let contact of contactos; let i=index">
-                <img src="{{contact.icon}}" alt="{{contact.}}">
+                <img src="{{contact.icon}}" alt="{{contact.alt}}">
                 <h3>{{contact.dato}}</h3>
             </div>
        </article>
